@@ -5,6 +5,7 @@
 - API addition: ProgressBar.isVertical() - returns whether a progress bar is vertical or horizontal.
 - API Change: SplitPane now by default does not allow the split amount to shrink children below their minimum sizes (cropping them). This behavior can be reverted by overriding clampSplitAmount or wrapping the children in Containers set to minSize(0) and fill(). SplitPane also now correctly includes the handle min size in its own min size calculations.
 - API Change: SplitPane.getSplit() renamed to SplitPane.getSplitAmount() to match other getter and setter names.
+- Improved internal Timer synchronization.
 
 [1.9.6]
 - Fix performance regression in LWJGL3 backend, use java.nio instead of BufferUtils. Those are intrinsics and quite a bit faster than BufferUtils on HotSpot.
